overlap fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -1628,3 +1628,7 @@ td,th {
   -moz-box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.75);
   box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.25);
 }
+
+.col-md-10.col-sm-12.col-xs-12.col-md-offset-1 h5, .col-md-10.col-sm-12.col-xs-12.col-md-offset-1 h3 {
+  margin-right: 45px;
+}
